Add T1 map of brain

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -806,17 +806,8 @@
     "kernel": "Python3"
    },
    "source": [
-    "<center> <h2 style=\"font-family:timesnewroman;font-size:30px\">Benefits and Pitfalls</h2> </center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "source": [
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "The conventional inversion recovery experiment is considered the gold standard T<sub>1</sub> mapping technique for several reasons. A typical protocol has a long TR value and a sufficient number of inversion times for stable fitting (typically 5 or more) covering the range [0, TR]. It offers a wide dynamic range of signals (up to [-<i>k</i>M<sub>0</sub>, <i>k</i>M<sub>0</sub>]), providing a wide range of inversion times where high SNR is available to sample the signal recovery curve (Fukushima 1981). T<sub>1</sub> maps produced by inversion recovery are largely insensitive to inaccuracies in excitation flip angles and imperfect spoiling (Stikov et al. 2015), as all parameters except TI are constant for each measurement and only a single acquisition is performed (at TI) during each TR. One important pulse sequence design consideration is to avoid acquiring at inversion times where the signal for T<sub>1</sub> values of the tissue-of-interest is nulled, as for magnitude images these voxels will be dominated by Rician noise which can negatively impact the fit the under low SNR circumstances (<a href=\"#fig5\">Figure 5</a>). Inversion recovery can also often be acquired using commonly available standard pulse sequences available on most MRI scanners by setting up a customized acquisition protocol, and does not require any additional calibration measurements like a B<sub>1</sub> map.\n",
+    "<a href=\"#fig5\">Figure 5</a> displays an example brain dataset an inversion recovery experiment, along with the T<sub>1</sub> map fitted using the RD-NLS technique.\n",
     "</p>"
    ]
   },
@@ -828,7 +819,285 @@
    "source": [
     "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
     "<b>\n",
-    "<a name=\"fig5\" style=\"color:black;\">Figure 5.</a> Monte Carlo simulations (mean and standard deviation (STD), blue markers) and fitted T<sub>1</sub> values (mean and STD, red and green respectively) generated for a T<sub>1</sub> value of 900 ms and 5 TI values linearly spaced across the TR (ranging from 1 to 5 s). A bump in T<sub>1</sub> STD occurs near TR = 3000 ms, which coincides with the TR where the second TI is located near a null point for this T<sub>1</sub> value. \n",
+    "<a name=\"fig6\" style=\"color:black;\">Figure 5.</a> Figure 5. Example inversion recovery dataset of a healthy adult brain (left). Inversion times used to acquire this magnitude image dataset were 30 ms, 530 ms, 1030 ms, and 1530 ms, and used a TR of 1550ms. The T<sub>1</sub> map (right) was fitted using a RD-NLS algorithm.\n",
+    "</b>\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Octave"
+   },
+   "outputs": [],
+   "source": [
+    "cmd = ['curl -L -o ir_brain.zip https://osf.io/ezv74/download/'];\n",
+    "[STATUS,MESSAGE] = unix(cmd);\n",
+    "unzip('ir_brain.zip');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Octave"
+   },
+   "outputs": [],
+   "source": [
+    "% Load data\n",
+    "load('IRData.mat');\n",
+    "load('IRMask.mat');\n",
+    "\n",
+    "IRData = data;\n",
+    "Mask = imrotate(Mask,180);\n",
+    "clear data\n",
+    "\n",
+    "% Format model parameters\n",
+    "Model = inversion_recovery; \n",
+    "TI = [30; 530; 1030; 1530];\n",
+    "Model.Prot.IRData.Mat = [ TI];\n",
+    "\n",
+    "% Format data\n",
+    "data = struct();\n",
+    "data.IRData= double(IRData);\n",
+    "data.Mask= double(Mask);\n",
+    "\n",
+    "FitResults = FitData(data,Model,0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Octave"
+   },
+   "outputs": [],
+   "source": [
+    "% Reorient images\n",
+    "t1Map = imrotate(FitResults.T1.*Mask,-90);\n",
+    "xAxis = [0:size(t1Map,2)-1];\n",
+    "yAxis = [0:size(t1Map,1)-1];\n",
+    "TI_0030 = imrotate(squeeze(IRData(:,:,:,1).*Mask),-90);\n",
+    "TI_0530 = imrotate(squeeze(IRData(:,:,:,2).*Mask),-90);\n",
+    "TI_1030 = imrotate(squeeze(IRData(:,:,:,3).*Mask),-90);\n",
+    "TI_1530 = imrotate(squeeze(IRData(:,:,:,4).*Mask),-90);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3",
+    "tags": [
+     "scratch"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%get t1Map --from Octave\n",
+    "%get TI_0030 --from Octave\n",
+    "%get TI_0530 --from Octave\n",
+    "%get TI_1030 --from Octave\n",
+    "%get TI_1530 --from Octave\n",
+    "%get xAxis --from Octave\n",
+    "%get yAxis --from Octave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3",
+    "tags": [
+     "report_output",
+     "scratch"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from plotly import tools\n",
+    "trace1 = go.Heatmap(x = xAxis,\n",
+    "                   y = yAxis,\n",
+    "                   z=TI_0030,\n",
+    "                   colorscale='Greys',\n",
+    "                   showscale = False,\n",
+    "                   visible=False,\n",
+    "                   name = 'Signal')\n",
+    "trace2 = go.Heatmap(x = xAxis,\n",
+    "                   y = yAxis,\n",
+    "                   z=TI_0530,\n",
+    "                   colorscale='Greys',\n",
+    "                   showscale = False,\n",
+    "                   visible=False,\n",
+    "                   name = 'Signal')\n",
+    "trace3 = go.Heatmap(x = xAxis,\n",
+    "                   y = yAxis,\n",
+    "                   z=TI_1030,\n",
+    "                   colorscale='Greys',\n",
+    "                   showscale = False,\n",
+    "                   visible=True,\n",
+    "                   name = 'Signal')\n",
+    "trace4 = go.Heatmap(x = xAxis,\n",
+    "                   y = yAxis,\n",
+    "                   z=TI_1530,\n",
+    "                   colorscale='Greys',\n",
+    "                   visible=False,\n",
+    "                   showscale = False,\n",
+    "                   name = 'Signal')\n",
+    "trace5 = go.Heatmap(x = xAxis,\n",
+    "                   y = yAxis,\n",
+    "                   z=t1Map,\n",
+    "                   colorscale='Portland',\n",
+    "                   xaxis='x2',\n",
+    "                   yaxis='y2',\n",
+    "                   visible=True,\n",
+    "                   name = 'T1 values (ms)')\n",
+    "\n",
+    "data=[trace1, trace2, trace3, trace4, trace5]\n",
+    "\n",
+    "\n",
+    "updatemenus = list([\n",
+    "    dict(active=2,\n",
+    "         x = 0.15,\n",
+    "         xanchor = 'left',\n",
+    "         y = -0.1,\n",
+    "         yanchor = 'bottom',\n",
+    "         direction = 'up',\n",
+    "         font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=16\n",
+    "            ),\n",
+    "         buttons=list([   \n",
+    "            dict(label = '30 ms',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [True, False, False, False, True]},\n",
+    "                         ]),\n",
+    "            dict(label = '530 ms',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [False, True, False, False, True]},\n",
+    "                         ]),\n",
+    "            dict(label = '1030 ms',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [False, False, True, False, True]},\n",
+    "                         ]),\n",
+    "            dict(label = '1530 ms',\n",
+    "                 method = 'update',\n",
+    "                 args = [{'visible': [False,False, False, True, True]},\n",
+    "                         ])\n",
+    "        ]),\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "layout = dict(\n",
+    "    margin = dict(\n",
+    "                t=40,\n",
+    "                r=50,\n",
+    "                b=10,\n",
+    "                l=50),\n",
+    "    annotations=[\n",
+    "        dict(\n",
+    "            x=0.12,\n",
+    "            y=1.1,\n",
+    "            showarrow=False,\n",
+    "            text='MR Image',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=26\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=0.6,\n",
+    "            y=1.1,\n",
+    "            showarrow=False,\n",
+    "            text='T<sub>1</sub> map',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=26\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=1.15,\n",
+    "            y=1.1,\n",
+    "            showarrow=False,\n",
+    "            text='T<sub>1</sub> (ms)',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=26\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=0.1,\n",
+    "            y=-0.1,\n",
+    "            showarrow=False,\n",
+    "            text='TI:',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=22\n",
+    "            ),\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "    ],\n",
+    "    xaxis = dict(range = [0,127], autorange = False,\n",
+    "             showgrid = False, zeroline = False, showticklabels = False,\n",
+    "             ticks = '', domain=[0, 0.6]),\n",
+    "    yaxis = dict(range = [0,127], autorange = False,\n",
+    "             showgrid = False, zeroline = False, showticklabels = False,\n",
+    "             ticks = '', domain=[0, 1]),\n",
+    "    xaxis2 = dict(range = [0,127], autorange = False,\n",
+    "             showgrid = False, zeroline = False, showticklabels = False,\n",
+    "             ticks = '', domain=[0.4, 1]),\n",
+    "    yaxis2 = dict(range = [0,127], autorange = False,\n",
+    "             showgrid = False, zeroline = False, showticklabels = False,\n",
+    "             ticks = '', domain=[0, 1], anchor='x2'),\n",
+    "    showlegend = False,\n",
+    "    width = 800, height = 500,\n",
+    "    autosize = False,\n",
+    "    updatemenus=updatemenus\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "\n",
+    "iplot(fig, filename = 'basic-heatmap', config = config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<center> <h2 style=\"font-family:timesnewroman;font-size:30px\">Benefits and Pitfalls</h2> </center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
+    "The conventional inversion recovery experiment is considered the gold standard T<sub>1</sub> mapping technique for several reasons. A typical protocol has a long TR value and a sufficient number of inversion times for stable fitting (typically 5 or more) covering the range [0, TR]. It offers a wide dynamic range of signals (up to [-<i>k</i>M<sub>0</sub>, <i>k</i>M<sub>0</sub>]), providing a wide range of inversion times where high SNR is available to sample the signal recovery curve (Fukushima 1981). T<sub>1</sub> maps produced by inversion recovery are largely insensitive to inaccuracies in excitation flip angles and imperfect spoiling (Stikov et al. 2015), as all parameters except TI are constant for each measurement and only a single acquisition is performed (at TI) during each TR. One important pulse sequence design consideration is to avoid acquiring at inversion times where the signal for T<sub>1</sub> values of the tissue-of-interest is nulled, as for magnitude images these voxels will be dominated by Rician noise which can negatively impact the fit the under low SNR circumstances (<a href=\"#fig6\">Figure 6</a>). Inversion recovery can also often be acquired using commonly available standard pulse sequences available on most MRI scanners by setting up a customized acquisition protocol, and does not require any additional calibration measurements like a B<sub>1</sub> map.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
+    "<b>\n",
+    "<a name=\"fig6\" style=\"color:black;\">Figure 6.</a> Monte Carlo simulations (mean and standard deviation (STD), blue markers) and fitted T<sub>1</sub> values (mean and STD, red and green respectively) generated for a T<sub>1</sub> value of 900 ms and 5 TI values linearly spaced across the TR (ranging from 1 to 5 s). A bump in T<sub>1</sub> STD occurs near TR = 3000 ms, which coincides with the TR where the second TI is located near a null point for this T<sub>1</sub> value. \n",
     "</b>\n",
     "</center>"
    ]
