Convert equations to png images

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -101,9 +101,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;margin-top:60px;margin-bottom:60px;\">\n",
-    "<b>\n",
-    "$$M_z(TI) =  M_0\\frac{1-\\cos(\\theta_{180})e^{-\\frac{TR}{T_1}}-[1-\\cos(\\theta_{180})]e^{-\\frac{TI}{T_1}}}{1-\\cos(\\theta_{180})\\cos(\\theta_{90})e^{-\\frac{TR}{T_1}}} \\mathbf{\\tag{1}} $$\n",
-    "</b>\n",
+    "<center><img src=\"equation1.png\" style=\"width:auto;height:50px;margin-bottom: 50px;\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
@@ -111,9 +109,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;margin-top:60px;margin-bottom:60px;\">\n",
-    "<b>\n",
-    "$$M_z(TI) =  C(1-2e^{-\\frac{TI}{T_1}}+e^{-\\frac{TR}{T_1}})  \\mathbf{\\tag{2}} $$\n",
-    "</b>\n",
+    "<center><img src=\"equation2.png\" style=\"width:auto;height:50px;margin-bottom: 50px;\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
@@ -121,9 +117,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;margin-top:60px;margin-bottom:60px;\">\n",
-    "<b>\n",
-    "$$M_z(TI) =  C(1-2e^{-\\frac{TI}{T_1}}) \\mathbf{\\tag{3}}$$\n",
-    "</b>\n",
+    "<center><img src=\"equation3.png\" style=\"width:auto;height:50px;margin-bottom: 50px;\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
@@ -560,9 +554,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;margin-top:60px;margin-bottom:60px;\">\n",
-    "<b>\n",
-    "$$S(TI) =  a+be^{-\\frac{TI}{T_1}} \\mathbf{\\tag{4}}$$\n",
-    "</b>\n",
+    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
