Make links open new tab – old way would open within iframe

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -598,7 +598,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "where <i>a</i> and <i>b</i> are complex values. If magnitude-only data is available, a 3-parameter model can be sufficient by taking the absolute value of Eq. 4.  While the RD-NLS algorithms are too complex to be presented here (the reader is referred to the paper, (Barral et al. 2010)),  the code for these algorithms <a href=\"http://www-mrsrl.stanford.edu/~jbarral/t1map.html\">were released open-source</a> along with the original publication, and are also available as a <a href=\"https://github.com/neuropoly/qMRLab\">qMRLab</a> T<sub>1</sub> mapping model. One important thing to note about Eq. 4 is that it is general – no assumption is made about TR – and is thus as robust as Eq. 1 as long as all pulse sequence parameters other than TI are kept constant between each measurement. <a href=\"#fig4\">Figure 4</a> compares simulated data (Eq. 1) using a range of TRs (1.5·T<sub>1</sub> to 5·T<sub>1</sub>) fitted using either RD-NLS & Eq. 4 or a Levenberg-Marquardt fit of Eq. 2.\n",
+    "where <i>a</i> and <i>b</i> are complex values. If magnitude-only data is available, a 3-parameter model can be sufficient by taking the absolute value of Eq. 4.  While the RD-NLS algorithms are too complex to be presented here (the reader is referred to the paper, (Barral et al. 2010)),  the code for these algorithms <a href=\"http://www-mrsrl.stanford.edu/~jbarral/t1map.html\" target=\"_blank\">were released open-source</a> along with the original publication, and are also available as a <a href=\"https://github.com/neuropoly/qMRLab\" target=\"_blank\">qMRLab</a> T<sub>1</sub> mapping model. One important thing to note about Eq. 4 is that it is general – no assumption is made about TR – and is thus as robust as Eq. 1 as long as all pulse sequence parameters other than TI are kept constant between each measurement. <a href=\"#fig4\">Figure 4</a> compares simulated data (Eq. 1) using a range of TRs (1.5·T<sub>1</sub> to 5·T<sub>1</sub>) fitted using either RD-NLS & Eq. 4 or a Levenberg-Marquardt fit of Eq. 2.\n",
     "</p>\n",
     "</div>"
    ]
@@ -1507,12 +1507,12 @@
     "<div class=note_body>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b><i>\n",
-    "This blog post is powered by <a href=\"https://github.com/neuropoly/qMRLab\">qMRLab</a>. To view the code that was used to generate the figures in this blog post, hover your cursor in the top left of the page and click \"All cells\" in the \"Display contents\" popup that appears.\n",
+    "This blog post is powered by <a href=\"https://github.com/neuropoly/qMRLab\" target=\"_blank\">qMRLab</a>. To view the code that was used to generate the figures in this blog post, hover your cursor in the top left of the page and click \"All cells\" in the \"Display contents\" popup that appears.\n",
     "</i></b>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
     "<b><i>\n",
-    "An interactive Jupyter Notebook version of this blog post is also available throught MyBinder, and can be viewed <a href=\"https://mybinder.org/v2/gh/qMRLab/t1_notebooks/irblog?filepath=ir_blog%2FInversionRecovery.ipynb\">here</a>\n",
+    "An interactive Jupyter Notebook version of this blog post is also available throught MyBinder, and can be viewed <a href=\"https://mybinder.org/v2/gh/qMRLab/t1_notebooks/irblog?filepath=ir_blog%2FInversionRecovery.ipynb\" target=\"_blank\">here</a>\n",
     "</i></b>\n",
     "</p>\n",
     "</div>"
