Add citations, remove explanation for how to use jupyter notebook at the end since it has been moved to the top of the blog post

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Widely considered the gold standard for T<sub>1</sub> mapping, the inversion recovery technique estimates T<sub>1</sub> values by fitting the signal recovery curve acquired at different delays after an inversion pulse (180°). In a typical inversion recovery experiment (<a href=\"#fig1\">Figure 1</a>), magnetization at thermal equilibrium is inverted using a 180° RF pulse. After the longitudinal magnetization recovers through spin-lattice relaxation for predetermined delay (“inversion time”, TI), a 90° excitation pulse is applied, followed by a readout imaging sequence (typically a spin-echo or gradient-echo readout) to create a snapshot of the longitudinal magnetization state at that TI. Inversion recovery was first developed for NMR in the 1940s (Hahn 1949; Drain 1949), and the first T<sub>1</sub> map was acquired using a saturation-recovery technique (90° as a preparation pulse instead of 180°) by (Pykett and Mansfield 1978). Some distinct advantages of inversion recovery is its large potential range of signal change and an insensitivity to pulse sequence parameter imperfections (Stikov et al. 2015). Despite its proven robustness at measuring T<sub>1</sub>, inversion recovery is scarcely used in practice, because conventional implementations requires repetition times (TRs) on the order of 2 to 5 T<sub>1</sub> (Steen et al. 1994), making it challenging to acquire whole-organ T<sub>1</sub> maps in a clinically feasible time. Nonetheless, it is continuously used as a reference measurement during the development of new techniques, or when comparing different T<sub>1</sub> mapping techniques, and several variations of the inversion recovery technique have been developed, making it practical for some applications.\n",
+    "Widely considered the gold standard for T<sub>1</sub> mapping, the inversion recovery technique estimates T<sub>1</sub> values by fitting the signal recovery curve acquired at different delays after an inversion pulse (180°). In a typical inversion recovery experiment (<a href=\"#fig1\">Figure 1</a>), magnetization at thermal equilibrium is inverted using a 180° RF pulse. After the longitudinal magnetization recovers through spin-lattice relaxation for predetermined delay (“inversion time”, TI), a 90° excitation pulse is applied, followed by a readout imaging sequence (typically a spin-echo or gradient-echo readout) to create a snapshot of the longitudinal magnetization state at that TI. Inversion recovery was first developed for NMR in the 1940s (Hahn 1949; Drain 1949), and the first T<sub>1</sub> map was acquired using a saturation-recovery technique (90° as a preparation pulse instead of 180°) by (Pykett and Mansfield 1978). Some distinct advantages of inversion recovery is its large potential range of signal change and an insensitivity to pulse sequence parameter imperfections (Stikov et al. 2015). Despite its proven robustness at measuring T<sub>1</sub>, inversion recovery is scarcely used in practice, because conventional implementations requires repetition times (TRs) on the order of 2 to 5 T<sub>1</sub> (Steen et al. 1994), making it challenging to acquire whole-organ T<sub>1</sub> maps in a clinically feasible time. Nonetheless, it is continuously used as a reference measurement during the development of new techniques, or when comparing different T<sub>1</sub> mapping techniques, and several variations of the inversion recovery technique have been developed, making it practical for some applications (Messroghli et al. 2004; Piechnik et al. 2010).\n",
     "</p>\n",
     "</div>"
    ]
@@ -805,7 +805,7 @@
    "source": [
     "<div class=figure_caption>\n",
     "<b style=\"text-align:justify;\">\n",
-    "<a name=\"fig6\" style=\"color:black;\">Figure 5.</a> Figure 5. Example inversion recovery dataset of a healthy adult brain (left). Inversion times used to acquire this magnitude image dataset were 30 ms, 530 ms, 1030 ms, and 1530 ms, and used a TR of 1550ms. The T<sub>1</sub> map (right) was fitted using a RD-NLS algorithm.\n",
+    "<a name=\"fig5\" style=\"color:black;\">Figure 5.</a> Figure 5. Example inversion recovery dataset of a healthy adult brain (left). Inversion times used to acquire this magnitude image dataset were 30 ms, 530 ms, 1030 ms, and 1530 ms, and used a TR of 1550ms. The T<sub>1</sub> map (right) was fitted using a RD-NLS algorithm.\n",
     "</b>\n",
     "</div>"
    ]
@@ -1440,31 +1440,11 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "Several variations of the inversion recovery pulse sequence were developed to overcome challenges like those specified above. Amongst them, the Look-Locker technique (Look and Locker 1970) stands out as one of the most widely used in practice. Instead of a single 90° acquisition per TR, a periodic train of small excitation pulses θ are applied after the inversion pulse, {θ<sub>180</sub> – 𝛕 – θ – 𝛕 – θ – ...}, where  𝛕 = TR/n and n is the number of sampling acquisitions. This pulse sequence samples the inversion time relaxation curve much more efficiently than conventional inversion recovery, but at a cost of lower SNR. However, because the magnetization state of each TI measurement depends on the previous series of θ excitation, it has higher sensitivity to B<sub>1</sub>-inhomogeneities and imperfect spoiling compared to inversion recovery (Gai et al. 2013; Stikov et al. 2015) . Nonetheless, Look-Locker is widely used for rapid T<sub>1</sub> mapping applications, and variants like MOLLI (Modified Look-Locker Inversion recovery) are widely used for cardiac T<sub>1</sub> mapping (Messroghli et al. 2004).\n",
+    "Several variations of the inversion recovery pulse sequence were developed to overcome challenges like those specified above. Amongst them, the Look-Locker technique (Look and Locker 1970) stands out as one of the most widely used in practice. Instead of a single 90° acquisition per TR, a periodic train of small excitation pulses θ are applied after the inversion pulse, {θ<sub>180</sub> – 𝛕 – θ – 𝛕 – θ – ...}, where  𝛕 = TR/n and n is the number of sampling acquisitions. This pulse sequence samples the inversion time relaxation curve much more efficiently than conventional inversion recovery, but at a cost of lower SNR. However, because the magnetization state of each TI measurement depends on the previous series of θ excitation, it has higher sensitivity to B<sub>1</sub>-inhomogeneities and imperfect spoiling compared to inversion recovery (Gai et al. 2013; Stikov et al. 2015) . Nonetheless, Look-Locker is widely used for rapid T<sub>1</sub> mapping applications, and variants like MOLLI (Modified Look-Locker Inversion recovery) and ShMOLLI (Shortened MOLLI) are widely used for cardiac T<sub>1</sub> mapping (Messroghli et al. 2004; Piechnik et al. 2010)\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
     "Another inversion recovery variant that’s worth mentioning is saturation recovery, in which the inversion pulse is replaced with a saturation pulse: {θ<sub>90</sub> – TI – θ<sub>90</sub>}. This technique was used to acquire the very first T<sub>1</sub> map (Pykett and Mansfield 1978). Unlike inversion recovery, this pulse sequence does not need a long TR to recover to its initial condition; every θ<sub>90</sub> pulse resets the longitudinal magnetization to the same initial state. However, to properly sample the recovery curve, TIs still need to reach the order of ~T<sub>1</sub>, the dynamic range of signal potential is cut in half ([0, M<sub>0</sub>]), and the short TIs (which have the fastest acquisition times) have the lowest SNRs.\n",
-    "</p>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "source": [
-    "<div class=note_body>\n",
-    "<p style=\"text-align:justify;\">\n",
-    "<b><i>\n",
-    "This blog post is powered by <a href=\"https://github.com/neuropoly/qMRLab\" target=\"_blank\">qMRLab</a>. To view the code that was used to generate the figures in this blog post, hover your cursor in the top left of the page and click \"All cells\" in the \"Display contents\" popup that appears.\n",
-    "</i></b>\n",
-    "\n",
-    "<p style=\"text-align:justify;\">\n",
-    "<b><i>\n",
-    "An interactive Jupyter Notebook version of this blog post is also available throught MyBinder, and can be viewed <a href=\"https://mybinder.org/v2/gh/qMRLab/t1_notebooks/irblog?filepath=ir_blog%2FInversionRecovery.ipynb\" target=\"_blank\">here</a>\n",
-    "</i></b>\n",
     "</p>\n",
     "</div>"
    ]
@@ -1511,6 +1491,10 @@
     "\n",
     "<p style=\"text-align:justify;\">\n",
     "Messroghli, D.R. et al., 2004. Modified Look-Locker inversion recovery (MOLLI) for high-resolution T<sub>1</sub> mapping of the heart. <i>Magn. Reson. Med.</i>, 52(1), pp.141–146.\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Piechnik, S.K. et al., 2010. Shortened Modified Look-Locker Inversion recovery (ShMOLLI) for clinical myocardial T<sub>1</sub>-mapping at 1.5 and 3 T within a 9 heartbeat breathhold. <i>J. Cardiovasc. Magn. Reson.</i>, 12, p.69.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
