Fix ylabel center alignment in figures, change title

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -32,7 +32,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "<center><h1 style=\"font-family: timesnewroman;font-size: 40px;\">T<sub>1</sub> Mapping: Inversion Recovery</h1></center>\n",
+    "<center><h1 style=\"font-family: timesnewroman;font-size: 40px;\">Inversion Recovery T<sub>1</sub> Mapping</h1></center>\n",
     "<p>"
    ]
   },
@@ -195,9 +195,11 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "<a name=\"fig2\" style=\"color:black;\">Figure 2.</a> Inversion recovery curves (Eq. 2) for three different T<sub>1</sub> values, approximating the major types of tissues in the brain.\n",
     "</b>\n",
+    "</p>\n",
     "</div>"
    ]
   },
@@ -269,7 +271,7 @@
     "        ),\n",
     "        dict(\n",
     "            x=-0.15,\n",
-    "            y=0.4714285714285711,\n",
+    "            y=0.50,\n",
     "            showarrow=False,\n",
     "            text='Long. Magnetization (M<sub>z</sub>)',\n",
     "            font=dict(\n",
@@ -330,7 +332,8 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "<a name=\"fig3\" style=\"color:black;\">Figure 3.</a> Signal recovery curves simulated using Eq. 3 (solid) and Eq. 1 (dotted) with a TR = 5 s for a T<sub>1</sub> values ranging between 0.25 to 5 s.\n",
     "</b>\n",
     "</div>"
@@ -474,7 +477,7 @@
     "        ),\n",
     "        dict(\n",
     "            x=-0.14,\n",
-    "            y=0.4714285714285711,\n",
+    "            y=0.5,\n",
     "            showarrow=False,\n",
     "            text='Signal (magnitude)',\n",
     "            font=dict(\n",
@@ -561,7 +564,8 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "<a name=\"fig4\" style=\"color:black;\">Figure 4.</a> Fitting comparison of simulated data (blue markers) with T<sub>1</sub> = 1 s and TR = 1.5 to 5 s, using fitted using RD-NLS & Eq. 4 (orange) and Levenberg-Marquardt & Eq. 2 (green, long TR approximation).\n",
     "</b>\n",
     "</div>"
@@ -738,7 +742,7 @@
     "        ),\n",
     "        dict(\n",
     "            x=-0.14,\n",
-    "            y=0.4714285714285711,\n",
+    "            y=0.5,\n",
     "            showarrow=False,\n",
     "            text='Signal (magnitude)',\n",
     "            font=dict(\n",
@@ -804,7 +808,8 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "<a name=\"fig5\" style=\"color:black;\">Figure 5.</a> Figure 5. Example inversion recovery dataset of a healthy adult brain (left). Inversion times used to acquire this magnitude image dataset were 30 ms, 530 ms, 1030 ms, and 1530 ms, and used a TR of 1550ms. The T<sub>1</sub> map (right) was fitted using a RD-NLS algorithm.\n",
     "</b>\n",
     "</div>"
@@ -1085,7 +1090,8 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "<a name=\"fig6\" style=\"color:black;\">Figure 6.</a> Monte Carlo simulations (mean and standard deviation (STD), blue markers) and fitted T<sub>1</sub> values (mean and STD, red and green respectively) generated for a T<sub>1</sub> value of 900 ms and 5 TI values linearly spaced across the TR (ranging from 1 to 5 s). A bump in T<sub>1</sub> STD occurs near TR = 3000 ms, which coincides with the TR where the second TI is located near a null point for this T<sub>1</sub> value. \n",
     "</b>\n",
     "</div>"
