Integrate figs and eqs to notebook

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -139,7 +139,7 @@
     "</div>\n",
     "\n",
     "<p>\n",
-    "<center><img src=\"vfa_pulsesequences.png\" style=\"width:500px;height:auto;\"></center>"
+    "<center><img src=\"vfa_pulsesequence.png\" style=\"width:500px;height:auto;\"></center>"
    ]
   },
   {
@@ -397,9 +397,16 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation2.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "Discuss approximatinos, ways to  fits, etc\n",
+    "</p>\n",
+    "\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<center><img src=\"equation3.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "</p>\n",
     "\n",
     "</div>"
    ]
